# SimpleEmbeddedEventDrivenFramework

./: .gitignore  CMakeLists.txt  LICENSE  README.md
SimpleEmbeddedEventDrivenFramework/: CMakeLists.txt  SimpleEmbeddedEventDrivenFramework.cpp  SimpleEmbeddedEventDrivenFramework.h
SimpleEmbeddedEventDrivenFramework/common/: EventManager.cpp  EventManager.h  EventQueue.cpp  EventQueue.h  KeyValueConfig.cpp  KeyValueConfig.h  Logger.cpp  Logger.h  TCPClient.cpp  TCPClient.h  TCPServer.cpp  TCPServer.h  Timer.cpp  Timer.h
